# kiwichatd

./: .cproject  .project  CMakeLists.txt  README.md  build.sh  check.sh  start.sh  stop.sh
Debug/: makefile  sources.mk
conf/: chatd.conf
data/: info.json  userinfo.json
src/: kiwichatd.c
src/kiwichatd.com/: kcd_config.h
src/kiwichatd.com/core/: CMakeLists.txt  kcd_channel.c  kcd_channel.h  kcd_conf.c  kcd_conf.h  kcd_core.h  kcd_cycle.c  kcd_cycle.h  kcd_license.c  kcd_license.h  kcd_message.c  kcd_message.h  kcd_process.c  kcd_process.h  kcd_protocol.c  kcd_protocol.h  kcd_request.c  kcd_request.h  kcd_user.c  kcd_user.h
src/studease.cn/: stu_config.h
src/studease.cn/core/: stu_atomic.h  stu_buf.h  stu_core.h  stu_json.c  stu_json.h  stu_log.c  stu_palloc.h  stu_queue.h  stu_rbtree.c  stu_rbtree.h  stu_timer.c  stu_upstream.c
src/studease.cn/http/: stu_http.c  stu_http_parse.c  stu_http_request.c  stu_http_request.h
src/studease.cn/utils/: stu_hardware.c  stu_hardware.h
src/studease.cn/websocket/: stu_websocket.c  stu_websocket.h  stu_websocket_frame.c  stu_websocket_phase.c  stu_websocket_request.c  stu_websocket_request.h
tools/: start.sh
